--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
                         <ul>
                             {{#each trucks}}
                             <li>
-                                <a href="/truck/" class="item-link item-content">
+                                <a href="/truck/{{id}}/" class="item-link item-content">
                                     <div class="item-media"><i class="icon f7-icons">rocket_fill</i></div>
                                     <div class="item-inner">
                                         <div class="item-title">
