Add editing form

--- a/www/pages/truck.html
+++ b/www/pages/truck.html
@@ -20,7 +20,7 @@
                         <div class="item-inner">
                             <div class="item-title item-label">Наименование</div>
                             <div class="item-input-wrap">
-                                <input type="text" name="nameTruck" placeholder="">
+                                <input type="text" name="nameTruck" placeholder="" value="{{this.$route.query.nameTruck}}">
                             </div>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                         <div class="item-inner">
                             <div class="item-title item-label">Стоимость</div>
                             <div class="item-input-wrap">
-                                <input type="number" name="price" placeholder="0.00">
+                                <input type="number" name="price" placeholder="0.00" value="{{this.$route.query.price}}">
                             </div>
                         </div>
                     </div>
