--- a/www/index.html
+++ b/www/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Required meta tags-->
     <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- Color theme for statusbar -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="theme-color" content="#2196f3">
-    <!-- Your app title -->
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
     <title>Truck Viewer</title>
     <!-- Path to Framework7 Library CSS -->
     <link rel="stylesheet" href="./framework7/css/framework7.min.css">
-    <link rel="stylesheet" href="./framework7/css/framework7-icons.css">
+    <link rel="stylesheet" href="./framework7/css/icons.css">
 </head>
 <body>
 
@@ -20,47 +20,25 @@
 
     <div class="statusbar"></div>
 
-    <div class="view view-main">
-
-        <div data-name="home" class="page">
-
-            <div class="navbar">
-                <div class="navbar-inner">
-                    <div class="title">Тестовое приложение TruckViewer</div>
-                </div>
+    <div class="views tabs ios-edges">
+        <!-- Tabbar for switching views-tabs -->
+        <div class="toolbar tabbar-labels toolbar-bottom-md">
+            <div class="toolbar-inner">
+                <a href="#view-catalog" class="tab-link tab-link-active">
+                    <i class="icon f7-icons ios-only">list</i>
+                    <i class="icon f7-icons ios-only icon-ios-fill">list_fill</i>
+                    <i class="icon material-icons md-only">view_list</i>
+                    <span class="tabbar-label">TruckViewer</span>
+                </a>
             </div>
+        </div>
 
-            <div class="page-content">
-
-                <script id="listTemplate" type="text/template7">
-                    <div class="list">
-                        <ul>
-                            {{#each trucks}}
-                            <li>
-                                <a href="/truck/{{id}}/?nameTruck={{nameTruck}}&price={{price}}" class="item-link item-content">
-                                    <div class="item-media"><i class="icon f7-icons">rocket_fill</i></div>
-                                    <div class="item-inner">
-                                        <div class="item-title">
-                                            <div class="item-header">
-                                                <div class="padding">{{nameTruck}}</div>
-                                            </div>
-                                            <i class="icon f7-icons">money_rubl_round</i>
-                                            {{price}}
-                                        </div>
-                                        <div class="item-after">Редактировать</div>
-                                    </div>
-                                </a>
-                            </li>
-                            {{/each}}
-                        </ul>
-                    </div>
-                </script>
-
-            </div>
-
+        <div id="view-catalog" class="view view-main tab tab-active">
+            <!-- Catalog page will be loaded here dynamically from /catalog/ route -->
         </div>
 
     </div>
+
 </div>
 
 <script type="text/javascript" src="./framework7/js/framework7.min.js"></script>
