Add VDOM and other

--- a/www/pages/catalog.html
+++ b/www/pages/catalog.html
@@ -3,8 +3,15 @@
     <div class="page" data-name="catalog">
         <div class="navbar">
             <div class="navbar-inner sliding">
-                <div class="title">Truck list</div>
+                <div class="title">Список грузовиков</div>
             </div>
+        </div>
+        <div class="fab fab-extended fab-center-bottom">
+            <a href="/truck/create-truck/">
+                <i class="icon f7-icons ios-only">add</i>
+                <i class="icon material-icons md-only">add</i>
+                <div class="fab-text">Добавить</div>
+            </a>
         </div>
         <div class="page-content">
             {{#if trucks}}
